--- a/src/style.css
+++ b/src/style.css
@@ -117,3 +117,12 @@ contenedor-contador {
   margin: 20px;
   text-align: center;
 }
+
+#input-turno {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  margin: 20px;
+}
