--- a/src/style.css
+++ b/src/style.css
@@ -118,7 +118,7 @@ contenedor-contador {
   text-align: center;
 }
 
-#input-turno {
+#input-contador {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
